@@ -7,6 +7,10 @@ Revision history for Net-Statsd-Tiny
   [Other Changes]
   - Removed stub Net::Statsd::Tiny::Types module.
 
+  [Tests]
+  - Updated tests to be more Windows-friendly (backported from
+    Net-Statsd-Lite).
+
 v0.3.1    2018-05-02 20:58:00+01:00 Europe/London
   [Documentation]
   - Rewrote the section about data validation.
